syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.example.entity";
//entity to show inheritance
message Credential {
  oneof mode {
    EmailCredential emailMode = 1;
    PhoneOTP phoneMode = 2;
  }
}

message EmailCredential {
  string email = 1;
  string password = 2;
}

message PhoneOTP {
  int32 number = 1;
  int32 code = 2;
}